Added the swagger script
