# src/routes/index.js
@@ -1,72 +1,77 @@
 import express from 'express'
-const router = express.Router({ mergeParams: true });
-import { body,  param, query, validationResult } from 'express-validator';
-import ApiController from '../controllers/api.controller.js'
+const router = express.Router();
+import { body,  param, query, validationResult  } from 'express-validator';
+import ProductController from '../controllers/product.controller.js'
 
 // Landing page route
-router.get('/', (req, res) => { res.json( { name: 'cse341-api', date: Date.now()})})
-// API routes
+router.get('/', ProductController.getAllProducts)
 
-// get professional data
-router.get('/professional', ApiController.getProfessional);
+// get all products
+router.get('/products', ProductController.getAllProducts);
 
- 
-router.post('/contact',
+// get product detail  
+router.get('/products/:productId', [
+    param('productId').isMongoId().withMessage('Valid product ID is required')
+], ProductController.getProductById);
+
+
+
+router.post('/products/',
       /*
     #swagger.summary = 'Create a new user'
     #swagger.requestBody = {
       required: true,
       content: {
         "application/json": {
-          schema: { $ref: "#/components/schemas/ContactCreate" }
+          schema: { $ref: "#/components/schemas/ProductCreate" }
         }
       }
     }
   */
     [
-  body('firstName').notEmpty().withMessage('Name is required'),
-  body('lastName').notEmpty().withMessage('Last name is required'),
-  body('email').isEmail().withMessage('Valid email is required'),
-  body('favoriteColor').notEmpty().withMessage('Favorite color is required'),
-  body('birthday').isDate().withMessage('Valid date is required')
-],ApiController.createContact);
-
-// get contact data detail  
-router.get('/contact/:contactId', [
-    param('contactId').isMongoId().withMessage('Valid contact ID is required')
-], ApiController.getContact);
-
-// get all contact data
-router.get('/contacts', ApiController.getAllContacts);
+  body('productName').notEmpty().withMessage('Product Name is required'),
+  body('price').isNumeric().withMessage('Price is required'),
+  body('description').notEmpty(),
+  body('category').notEmpty().withMessage('Category name is required'),
+  body('subCategory').optional(),
+  body('ownerName').notEmpty().withMessage('Owner name is required'),
+  body('ownerEmail').optional().isEmail().withMessage('Valid email is required'),
+  body('ownerName').notEmpty(),
+  body('isActive').optional().isBoolean()
+],ProductController.createProduct);
 
  
-router.put('/contacts/:contactId', [
-    param('contactId').isMongoId().withMessage('Valid contact ID is required'),
-    body('firstName').optional().notEmpty().withMessage('Name is required'),
-    body('lastName').optional().notEmpty().withMessage('Last name is required'),
-    body('favoriteColor').optional().notEmpty().withMessage('Favorite color is required'),
-    body('birthday').optional().isDate().withMessage('Valid date is required')
+router.put('/products/:productId', [
+  body('productName').notEmpty().withMessage('Product Name is required'),
+  body('price').isNumeric().withMessage('Price is required'),
+  body('description').notEmpty(),
+  body('category').notEmpty().withMessage('Category name is required'),
+  body('subCategory').optional(),
+  body('ownerName').notEmpty().withMessage('Owner name is required'),
+  body('ownerEmail').optional().isEmail().withMessage('Valid email is required'),
+  body('ownerName').notEmpty(),
+  body('isActive').optional().isBoolean()
 ],
 
  /*
-    #swagger.summary = 'Update an existing user'
+    #swagger.summary = 'Update an existing product '
   
     #swagger.requestBody = {
       required: true,
       content: {
         "application/json": {
-          schema: { $ref: "#/components/schemas/ContactUpdate" }
+          schema: { $ref: "#/components/schemas/ProductUpdate" }
         }
       }
     }
   */
 
-ApiController.updateContact);
+ProductController.updateProduct);
 
 // delete contact data
-router.delete('/contacts/:contactId', [
-    param('contactId').isMongoId().withMessage('Valid contact ID is required')
-], ApiController.deleteContact);
+router.delete('/products/:productId', [
+    param('productId').isMongoId().withMessage('Valid product ID is required')
+], ProductController.deleteProduct);
 
 
 export default router
